# domain-adapted-embedding-alignment

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: local_6gb.yaml  smoke_cpu.yaml
docs/: documentation.md  handbook.md  tooling_decisions.md
docs/tutorials/: 00_learning_path.md  01_problem_and_embedding_foundations.md  02_data_preparation_and_schema.md  03_pair_mining_and_splits.md  04_contrastive_training_and_lora.md  05_backend_selection_peft_vs_unsloth.md  06_retrieval_systems_bm25_dense_hybrid.md  07_evaluation_metrics_and_judging.md  08_embedding_space_visualization.md  09_rag_chroma_and_pinecone.md  10_graphrag_local_and_global.md  11_inference_and_serving_patterns.md  12_reports_validation_and_auditability.md
notebooks/: 01_problem_analysis_and_embedding_theory.ipynb  02_data_preparation_and_pair_mining.ipynb  03_baseline_retrieval_systems.ipynb  04_contrastive_learning_and_finetuning.ipynb  05_evaluation_and_error_analysis.ipynb  06_visualization_embedding_space.ipynb  07_rag_integration_chroma_pinecone.ipynb  08_graphrag_integration_and_inference.ipynb
scripts/: execute_notebooks.sh  finalize_reports.py  generate_tutorial_notebooks.py  run_end_to_end.py
src/domain_adapted_embedding_alignment/: __init__.py  cli.py  schemas.py  settings.py  utils.py
src/domain_adapted_embedding_alignment/data/: __init__.py  loaders.py  pair_builder.py
src/domain_adapted_embedding_alignment/evaluation/: __init__.py  evaluator.py  llm_judge.py  visualization.py
src/domain_adapted_embedding_alignment/graphrag/: __init__.py  graph_builder.py  retriever.py
src/domain_adapted_embedding_alignment/pipelines/: build_final_report.py  evaluate_models.py  finalize_reports.py  prepare_data.py  run_inference.py  (+4 more)
tests/: test_backend_selection.py  test_finalize_reports.py  test_metrics.py  test_notebook_structure.py  test_pair_builder.py
(+17 files in other folders)
